--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ before_script:
 
 script:
   - 'bundle exec rake db:create'
-  - 'bundle exec rake db:structure:load'
+  - 'bundle exec rake db:migrate'
   - 'bundle exec rspec'
 
 notifications:
