Changes for docker compose

--- a/config/database.yml
+++ b/config/database.yml
@@ -52,3 +52,9 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
+
+production:
+  <<: *default
+  database: rw_dataset_production
+  password: <%= ENV['POSTGRES_PASS'] %>
+
