Setup staging environment

--- a/config/database.yml
+++ b/config/database.yml
@@ -53,8 +53,12 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 
-production:
+staging:
   <<: *default
   database: rw_embed_production
   password: <%= ENV['POSTGRES_PASS'] %>
 
+production:
+  <<: *default
+  database: rw_embed
+  password: <%= ENV['POSTGRES_PASS'] %>
