--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -10,13 +10,19 @@
 # Make sure the secrets in this file are kept private
 # if you're sharing your code publicly.
 
-development:
+default: &default
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
 
+development:
+  <<: *default
+
 test:
-  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  <<: *default
 
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
+staging:
+  <<: *default
+
 production:
-  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  <<: *default
